tests/poorly_formed_exports/poorly_formed_exports.exp
FLOW STATUS:
Error ------------------------------------------------------------------------------------------------- libs/libs.js:4:3

Exports can only appear at the top level [invalid-export]

   4|   exports.foo = 5;
        ^^^^^^^


Error ---------------------------------------------------------------------------------------- bad-default-export.js:4:3

Exports can only appear at the top level [invalid-export]

   4|   module.exports = 42
        ^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------ bad-named-export.js:4:3

Exports can only appear at the top level [invalid-export]

   4|   module.exports.foo = 42;
        ^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------ bad-named-export.js:5:3

Exports can only appear at the top level [invalid-export]

   5|   exports.bar = 42;
        ^^^^^^^


Error ------------------------------------------------------------------------------------------------ bad-uses.js:16:11

`module` may only be used as part of a legal top level export statement [invalid-export]

   16| addsAProp(module.exports); // ERROR
                 ^^^^^^


Error ------------------------------------------------------------------------------------------------ bad-uses.js:17:11

`module` may only be used as part of a legal top level export statement [invalid-export]

   17| addsAProp(module['exports']); // ERROR
                 ^^^^^^


Error ------------------------------------------------------------------------------------------------ bad-uses.js:18:11

`exports` may only be used as part of a legal top level export statement [invalid-export]

   18| addsAProp(exports); // ERROR
                 ^^^^^^^


Error ------------------------------------------------------------------------------------------------ bad-uses.js:19:20

`module` may only be used as part of a legal top level export statement [invalid-export]

   19| addsAPropToExports(module); // ERROR
                          ^^^^^^


Error ------------------------------------------------------------------------------------------------- bad-uses.js:24:3

`exports` may only be used as part of a legal top level export statement [invalid-export]

   24|   exports['foo'] = 42; // ERROR
         ^^^^^^^


Error ------------------------------------------------------------------------------------------------- bad-uses.js:25:3

Exports can only appear at the top level [invalid-export]

   25|   exports.foo = 5; // ERROR
         ^^^^^^^


Error ------------------------------------------------------------------------------------------------- bad-uses.js:28:1

`module` may only be used as part of a legal top level export statement [invalid-export]

   28| module.exports['foo'] = 42; // ERROR
       ^^^^^^


Error ------------------------------------------------------------------------------------------------- bad-uses.js:29:1

`module` may only be used as part of a legal top level export statement [invalid-export]

   29| module['exports'] = {}; // ERROR
       ^^^^^^


Error ------------------------------------------------------------------------------------------------- bad-uses.js:30:1

`exports` may only be used as part of a legal top level export statement [invalid-export]

   30| exports['foo'] = 42; // ERROR
       ^^^^^^^


Error ------------------------------------------------------------------------------------------------- bad-uses.js:32:5

`exports` may only be used as part of a legal top level export statement [invalid-export]

   32| (5, exports).foo = 1; // ERROR
           ^^^^^^^


Error ------------------------------------------------------------------------------------------------- bad-uses.js:33:5

`module` may only be used as part of a legal top level export statement [invalid-export]

   33| (5, module).exports.foo = 34; // ERROR
           ^^^^^^


Error ------------------------------------------------------------------------------------------------- bad-uses.js:38:3

`module` may only be used as part of a legal top level export statement [invalid-export]

   38|   module = {}; // ERROR
         ^^^^^^


Error ------------------------------------------------------------------------------------------------- bad-uses.js:39:3

`exports` may only be used as part of a legal top level export statement [invalid-export]

   39|   exports = {}; // ERROR
         ^^^^^^^


Error ------------------------------------------------------------------------------------------------ bad-uses.js:56:26

`module` may only be used as part of a legal top level export statement [invalid-export]

   56| if (require.main === (5, module)) { } // ERROR
                                ^^^^^^



Found 18 errors
FLOW CHECK-CONTENTS:
Error ------------------------------------------------------------------------------------------ bad-named-export.js:4:3

Exports can only appear at the top level [invalid-export]

   4|   module.exports.foo = 42;
        ^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------ bad-named-export.js:5:3

Exports can only appear at the top level [invalid-export]

   5|   exports.bar = 42;
        ^^^^^^^



Found 2 errors
